# udu

./: .clang-format  .gitignore  BENCHMARK  BENCHMARKS.md  CMakeLists.txt  Make.ps1  Makefile  README.md  build.zig
.github/workflows/: ci.yml  rel.yml  release.yml
C/: args.c  args.h  const.h  main.c  platform.c  platform.h  types.h  udu.c  util.c  util.h  walk.c  walk.h
c/: udu.c
ci/: release.py
scripts/: benchmark  build  install.sh  mingw.cmake
src/: main.zig  usage.txt  util.zig
zig/src/: main.zig  util.zig
